--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Styles -->
     <link rel="stylesheet" href="../dist/output.css">
     <link rel="stylesheet" href="./input.css">
+    <!-- Favicon -->
+    <link rel="icon" href="./assets/images/picachu.png">
     <!-- Title -->
     <title>Document</title>
 </head>
@@ -17,23 +23,42 @@
     <header class="pt-[50px]">
         <div class="container mx-auto px-5">
             <nav class="">
-                <i class="bi bi-suit-heart text-4xl text-black text-end flex justify-end"></i>
+                <i class="bi bi-suit-heart text-4xl text-black flex justify-end h_img cursor-pointer hover:text-red-600"></i>
 
                 <img src="./assets/images/pokemon_logo.svg" class="mx-auto" alt="Logo">
 
-                <div class="flex gap-[35px]">
-                    <select name="filter" id="filter" class="px-[82px] py-4 rounded-[15px] border-2 border-black cursor-pointer">
+                <div class="flex gap-[35px] justify-center mt-[70px]">
+                    <select name="filter" id="filter" class="px-[82px] py-4 rounded-[15px] border-2 border-black cursor-pointer text-black font-bold text-2xl">
                         <option value="gross" selected disabled>Gross</option>
                     </select>
 
                     <div class="w-[300px] px-[30px] bg-white flex items-center justify-between border-2 border-black rounded-[15px]">
-                        <input type="search" placeholder="Search" class="focus:outline-none placeholder:text-black w-full">
-                        <i class="bi bi-search w-6"></i>
+                        <input type="search" placeholder="Search" class="search focus:outline-none placeholder:text-black font-bold text-2xl w-full">
+                        <i class="s_img bi bi-search w-6"></i>
                     </div>
+
+                    <select name="a-z" id="a-z" class="px-20 py-4 rounded-[15px] border-2 border-black cursor-pointer text-black font-bold text-2xl">
+                        <option value="gross" selected disabled class="">Aa-Zz</option>
+                    </select>
+
+                    <button class="px-[64px] bg-white flex items-center justify-between border-2 border-black rounded-[15px] text-black font-bold text-2xl">
+                        Button
+                    </button>
                 </div>
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="container mx-auto px-5">
+            <div class="wrapper grid grid-cols-4 mt-[100px] place-content-between gap-y-[30px]">
+                
+            </div>
+        </div>
+    </main>
+
+    <script src="./dp.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
