--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Styles -->
-    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="./dist/output.css">
     <link rel="stylesheet" href="./input.css">
     <!-- Favicon -->
     <link rel="icon" href="./assets/images/picachu.png">
@@ -51,7 +51,7 @@
 
     <main>
         <div class="container mx-auto px-5">
-            <div class="wrapper grid grid-cols-4 mt-[100px] place-content-between gap-y-[30px]">
+            <div class="wrapper grid grid-cols-4 mt-[100px] gap-x-[85px] gap-y-[30px]">
                 
             </div>
         </div>
