--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <!-- Favicon -->
     <link rel="icon" href="./assets/images/picachu.png">
     <!-- Title -->
-    <title>Document</title>
+    <title>Pikachu</title>
 </head>
 
 <body class="bg-[#FFD845]">
