--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Styles -->
-    <link rel="stylesheet" href="./dist/output.css">
+    <link rel="stylesheet" href="../dist/output.css">
     <link rel="stylesheet" href="./input.css">
     <!-- Favicon -->
     <link rel="icon" href="./assets/images/picachu.png">
     <!-- Title -->
-    <title>Pikachu</title>
+    <title>Pokemon</title>
 </head>
 
 <body class="bg-[#FFD845]">
@@ -27,21 +27,21 @@
 
                 <img src="./assets/images/pokemon_logo.svg" class="mx-auto" alt="Logo">
 
-                <div class="flex gap-[35px] justify-center mt-[70px]">
-                    <select name="filter" id="filter" class="px-[82px] py-4 rounded-[15px] border-2 border-black cursor-pointer text-black font-bold text-2xl">
+                <div class="flex flex-wrap md:grid md:grid-cols-2 xl:grid-cols-4 gap-[35px] justify-center mt-[70px]">
+                    <select name="filter" id="filter" class="px-[82px] py-4 rounded-[15px] border-2 border-black cursor-pointer text-black font-bold text-2xl hover:shadow-2xl transition-all">
                         <option value="gross" selected disabled>Gross</option>
                     </select>
 
-                    <div class="w-[300px] px-[30px] bg-white flex items-center justify-between border-2 border-black rounded-[15px]">
+                    <div class="py-4 px-[30px] bg-white flex items-center justify-between border-2 border-black rounded-[15px] hover:shadow-2xl transition-all">
                         <input type="search" placeholder="Search" class="search focus:outline-none placeholder:text-black font-bold text-2xl w-full">
                         <i class="s_img bi bi-search w-6"></i>
                     </div>
 
-                    <select name="a-z" id="a-z" class="px-20 py-4 rounded-[15px] border-2 border-black cursor-pointer text-black font-bold text-2xl">
+                    <select name="a-z" id="a-z" class="px-20 py-4 rounded-[15px] border-2 border-black cursor-pointer text-black font-bold text-2xl hover:shadow-2xl transition-all">
                         <option value="gross" selected disabled class="">Aa-Zz</option>
                     </select>
 
-                    <button class="px-[64px] bg-white flex items-center justify-between border-2 border-black rounded-[15px] text-black font-bold text-2xl">
+                    <button class="px-[64px] py-3 bg-white flex items-center justify-center border-2 border-black rounded-[15px] text-black font-bold text-2xl hover:shadow-2xl transition-all">
                         Button
                     </button>
                 </div>
@@ -51,7 +51,7 @@
 
     <main>
         <div class="container mx-auto px-5">
-            <div class="wrapper grid grid-cols-4 mt-[100px] gap-x-[85px] gap-y-[30px]">
+            <div class="wrapper flex flex-wrap justify-center  md:grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 my-[100px] gap-x-[85px] gap-y-[30px]">
                 
             </div>
         </div>
